<resources>
    <string name="app_name">Emirates Q</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_artist">Search artist</string>
    <string name="oops_something_went_wrong">Oops something went wrong!</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="referral_code">Referral Code</string>
    <string name="debit_card">Debit Card</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="didn_t_received_code">Didn’t received code?</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_n_email_address">Enter the verification code we just sent on your\n email address.</string>
    <string name="welcome_to_home_page">Welcome to Home Page</string>
    <string name="congratulations">Congratulations</string>
    <string name="done">Done</string>
    <string name="enter_your_email_or_number">Enter your Email or Number</string>
    <string name="send_code">Send Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="your_password_has_been_changed_successfully">Your Password has been changed successfully.</string>
    <string name="back_to_login">Back To Login</string>
    <string name="they_can_invite_their_friends_and_earn_more_n_chances_of_winning_the_quiz">they can invite their friends and earn more\n chances of winning the quiz</string>
    <string name="invite_now">Invite Now</string>
    <string name="referral">Referral</string>
    <string name="wallet">Wallet</string>
    <string name="top_up">Top Up</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="hello_register_to_get_nstarted">Hello! Register to get \nstarted</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="password_8_character">Password must have atleast 8 character</string>
    <string name="password_must_special">Password should contain at least 1 special character.</string>
    <string name="enter_your_password">**************</string>
    <string name="enter_your_pasword">Enter You Password</string>
    <string name="enter_Password">Enter Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="quizzes">Quizzes</string>
    <string name="top_winners">Top Winners</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="find_your_dream">Find Your Dream!</string>
    <string name="popoular">Popular</string>
    <string name="apply">Apply</string>
    <string name="insert_you_coupon_code">Insert you coupon code</string>
    <string name="payment_method">Payment Method</string>
    <string name="description">Description</string>
    <string name="order_detail">Order Detail</string>
    <string name="reorder">Reorder</string>
    <string name="invoice">Invoice</string>
    <string name="subscription">Subscription</string>
    <string name="news">News</string>
    <string name="todays_news">Todays News</string>
    <string name="upcoming_news">Upcoming News</string>
    <string name="recent_news">Recent News</string>
    <string name="support_team">Support Team</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="you_earn_50_points">You earn 50 Points</string>
    <string name="invite_another">Invite Another</string>
    <string name="address">Address</string>
    <string name="coupon">Coupon</string>
    <string name="body_label">TETRIS</string>
    <string name="game_over_hint">GAME OVER</string>
    <string name="button_rotate">ROTATE</string>
    <string name="button_up" translatable="false">▲</string>
    <string name="button_left" translatable="false">◀</string>
    <string name="button_right" translatable="false">▶</string>
    <string name="button_down" translatable="false">▼</string>
    <string name="button_sounds">SOUNDS</string>
    <string name="button_pause">PAUSE/RESUME</string>
    <string name="button_reset">START/RESET</string>
    <string name="back_to_home">Back To Home</string>
    <string name="Games">Games</string>
    <string name="personal_information">Personal Information</string>
    <string name="profile">Profile</string>
    <string name="profile2" translatable="false"></string>
    <string name="dashboard">Dashboard</string>
    <string name="_1st" translatable="false">1<sup>st</sup></string>
    <string name="_2nd" translatable="false">2<sup>nd</sup></string>
    <string name="_3rd" translatable="false">3<sup>rd</sup></string>
    <string name="back">Back</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="collect_raffal_prize">Collect Raffle Prize</string>
    <string name="all_products">All Products</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_need_to_login_or_signup_to_nmove_further">You need to login or signup to\nmove further</string>
    <string name="order_completed">Order Completed</string>
    <string name="emirates_q">Emirates Q</string>
    <string name="see_all">See all</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_name">User Name</string>
    <string name="email_">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="password_">Password</string>
    <string name="change_password_">Change Password</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="games_leaderboard">Games leaderboard</string>
    <string name="ranked">#Ranked</string>
    <string name="name_">Name</string>
    <string name="score">Score</string>
    <string name="password_change">Password Change</string>
    <string name="ranking">Ranking</string>
    <string name="total_points">Total Points</string>
    <string name="total_chances">Total Chances</string>
    <string name="order_manage">Order Manage</string>
    <string name="chances">Chances</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="wishlist">Wishlist</string>
    <string name="security_policy">Security Policy</string>
    <string name="unsubscribe">UnSubscribe</string>
    <string name="delete_account">Delete Account</string>
    <string name="referral_">Referral</string>
    <string name="refer_your_friends_earn_gifts">Refer Your Friends, Earn Gifts</string>
    <string name="copy">Copy</string>
    <string name="register_to_get_started">Register to get Started</string>
    <string name="have_a_referral_code">Have a referral code?</string>
    <string name="already_registered">Already Registered?</string>
    <string name="women_dress">Women Dress</string>
    <string name="home_">Home</string>
    <string name="ecommerce">Ecommerce</string>
    <string name="quiz">Quiz</string>
    <string name="wallet_">Wallet</string>
    <string name="collect_raffle_prize">Collect Raffle Prize</string>
    <string name="notification">Notification</string>
    <string name="coupon_">Coupon</string>
    <string name="add_to_cart_">Add to cart</string>
    <string name="date">Date</string>
    <string name="oder_no">Oder No :</string>
    <string name="oder_qty">Oder Qty :</string>
    <string name="total_amount">Total Amount: </string>
    <string name="you_need_to_be_verify">You need to be verify</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="are_you_sure_you_want_to_delete">are you sure you want to delete</string>
    <string name="are_you_sure_you_want_to_unsubscribe">Are you sure you want to unsubscribe?</string>
    <string name="pay">Pay</string>
    <string name="you_have_successfully_confirm_your_payment_send">you have Successfully confirm your payment send!</string>
    <string name="home">Home</string>
    <string name="collect_prize">Collect Prize</string>
    <string name="tearms_and_condition">Terms And Condition</string>
    <string name="logout">Logout</string>
    <string name="subscribe_your_plan">Subscribe your Plan</string>
    <string name="let_s_upgrade_to_pro_account">Let’s Upgrade to Pro Account</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="state">State</string>
    <string name="save_for_future">Save for future</string>
    <string name="proceed_to_check_out">Proceed to Check out</string>
    <string name="processing">Processing</string>
    <string name="discount">Discount</string>
    <string name="sub_total">Sub total</string>
    <string name="the_luck_of_the_draw_is_with_you">The luck of the draw is with you!</string>
    <string name="claim_prize">Claim Prize</string>
    <string name="create_new_password">Create New Password</string>
    <string name="your_new_password_must_be_unique_form_those_n_previously_used">Your new Password must be unique form those\n previously used.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_n_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address,\n linked with your account.</string>
    <string name="welcome_back_glad_to_nsee_you_again">Welcome back! Glad to\nsee you, Again!</string>
    <string name="forgot_passwords">Forgot Passwords?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="weekly_news_quiz_will_you_win_the_tournamet">Weekly news quiz: Will you win the tournamet</string>
    <string name="posted">posted</string>
    <string name="reminders">Reminders</string>
    <string name="other_detail">Other Detail</string>
    <string name="order_no">Order no#</string>
    <string name="product_name">Product name</string>
    <string name="current_balance">Current Balance:</string>
    <string name="play_again">Play Again</string>
    <string name="my_reciept">My Reciept</string>
    <string name="transaction">Transaction</string>
    <string name="summer_house">Summer House</string>
    <string name="payment">Payment</string>
    <string name="login_now">Login now</string>
    <string name="premium">Premium</string>
    <string name="more_benifits">More Benifits</string>
    <string name="how_can_we_help_you">How Can we help You?</string>
    <string name="make_selection">Make Selection</string>
    <string name="select_one_of_the_option_given_below_to_sign_up">Select one of the option given below to sign Up</string>
    <string name="pay_now">Pay now</string>
    <string name="wishlist_items">Wishlist items</string>
    <string name="speed">Speed</string>
    <string name="judgment">Judgment</string>
    <string name="calculation">Calculation</string>
    <string name="accuracy">Accuracy</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="ok">Ok</string>
</resources>