<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/card_background"
    android:backgroundTint="@color/colorWhite"
    android:elevation="@dimen/_5sdp">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/app_bg"
        android:background="@drawable/card_background"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"/>


    <TextView
        android:id="@+id/removeBtn"
        style="@style/popins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/cancelBtn"
        style="@style/popins_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_1sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:maxLines="3"
        android:text="@string/are_you_sure_you_want_to_logout"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/removeBtn"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/removeBtn"
        app:layout_constraintTop_toBottomOf="@+id/removeBtn"
        app:layout_constraintVertical_bias="0.05" />



    <TextView
        android:id="@+id/btnCncl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        style="@style/popins_regular"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelBtn" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/popins_regular"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCncl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCncl"
        app:layout_constraintTop_toTopOf="@+id/btnCncl" />


</androidx.constraintlayout.widget.ConstraintLayout>