<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.Language.LanguageFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


          <ImageView
                android:id="@+id/btnBack"  android:contentDescription="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_button" />

            <TextView
                android:id="@+id/textView19"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="0.05">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_7sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioEnglish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:checked="true"
                    android:drawableStart="@drawable/flag_en"
                    android:drawablePadding="@dimen/_8sdp"
                    android:minHeight="48dp"
                    android:padding="@dimen/_7sdp"
                    android:textAlignment="viewStart"
                    android:text="@string/english"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:layout_marginBottom="5dp"
                    android:alpha="0.2"
                    android:background="@color/textSecondaryColor" />

                <RadioButton
                    android:id="@+id/radioArabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:drawableStart="@drawable/flag_ar"
                    android:drawablePadding="@dimen/_8sdp"
                    android:minHeight="48dp"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/arabic"
                    android:textSize="@dimen/_13ssp" />

            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>