<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_180sdp"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/border_filled"
    android:backgroundTint="@color/white"
    android:elevation="@dimen/_5sdp">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/app_bg"
        android:background="@drawable/card_background"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"/>


    <ImageView
        android:id="@+id/textView37"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:src="@drawable/error_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_need_to_login_or_signup_to_nmove_further"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"


        android:elevation="@dimen/_2sdp"
        android:gravity="center"
        android:text="@string/login"
        android:background="@drawable/card_background_border"
        android:backgroundTint="@color/theme_color"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/textView38"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"

        android:elevation="@dimen/_7sdp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/theme_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signIn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>